AC_INIT(netlibsdk, 1.0)
AC_CONFIG_SRCDIR(sock_ntop.c)
AM_CONFIG_HEADER(autoconf.h)
AC_CONFIG_AUX_DIR(config-aux)
AM_INIT_AUTOMAKE

AC_PROG_CC
AC_PROG_RANLIB

AC_TYPE_MODE_T
AC_TYPE_OFF_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T
AC_TYPE_UINT16_T

AC_CHECK_FUNCS([gethostname strerror])

AC_OUTPUT(Makefile)
